adds comments to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maxime odit iusto harum inventore debitis recusandae unde, repellat tempora necessitatibus placeat blanditiis dignissimos corporis animi quod ducimus repudiandae eum dolore!
       </p>
       <a href="files/free-guide.pdf" target="_blank">Download the free grooming guide.</a>
+      <!-- Ratings Section Starts -->
       <section>
         <h3>Rate your experience</h3>
         <p>We would love to know how you like Pawrfect Grooming.</p>
@@ -42,11 +43,12 @@
         </div>
         <a class="google" href="https://google.com">Leave a review on Google</a>
       </section>
+      <!-- Ratings Section Ends -->
     </main>
     <footer>
       <p>&copy; Copyright, 2023 </p>
     </footer>
-  </div>
+  </div><!-- Closes .container -->
 </body>
 
 </html>
